--- a/Develop/style.css
+++ b/Develop/style.css
@@ -6,11 +6,12 @@ body {
 
 textarea{
   background: transparent;
-  border: none;
+  border: solid;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  background-color: salmon;
 }
 
 .jumbotron {
@@ -37,7 +38,7 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: gray;
   color: #000000;
   border-top: 1px dashed #000000;
 }
